--- a/유럽 축구리그 데이터 분석, 경기 예측 및 베팅 전략 수립.ipynb
+++ b/유럽 축구리그 데이터 분석, 경기 예측 및 베팅 전략 수립.ipynb
@@ -8,7 +8,7 @@
     "    \n",
     "  \n",
     "                     \n",
-    "## <center>유럽 축구리그 데이터 분석, 경기 예측 및 베팅 전략 수립</center>    \n",
+    "## 유럽 축구리그 데이터 분석, 경기 예측 및 베팅 전략 수립\n",
     "\n",
     "---------------------------\n",
     "\n",
@@ -70,16 +70,16 @@
     "\n",
     "스포츠 베팅 회사의 오즈메이커들은 여러 지표를 통해 경기 결과의 확률을 예측하고 이를 바탕으로 베팅 회사가 최적의 수익을 낼 수 있는 배당률을 측정합니다. 그러나 특정 팀의 승리가 강하게 예상된다고 하더라도 오즈메이커들은 그 팀의 배당률을 너무 낮게 매기지는 않습니다. 만약 배당률이 너무 낮다면 베터들이 베팅을 하지 않을 것이고, 이는 베팅 회사의 수수료 수익의 감소로 직결되기 때문입니다. 그렇기 때문에 오즈메이커들은 경기 결과에 적정 배당률을 매깁니다. 저는 이렇게 경기마다 매겨진 배당률들의 표준편차는 오즈메이커가 느끼는 리그 내의 경쟁 강도를 표현한다고 판단하였고, 이것이 실제 승점의 표준편차를 얼마나 경향적으로 반영하는지 확인해 보았습니다.\n",
     "\n",
-    "![picture/EDA/1.png](picture/EDA/1.png)<center>**[그림1]시즌별 각 리그 승점의 표준편차**</center>\n",
+    "![picture/EDA/1.png](picture/EDA/1.png)**[그림1]시즌별 각 리그 승점의 표준편차**\n",
     "\n",
     "프로 축구 리그에서는 경기에서 승리를 거두면 3점을 획득하고 무승부를 달성하면 경기에 참여한 양팀 모두 1점씩 얻게 됩니다. 시즌 당 34~38 경기를 수행하기 때문에 우승 팀은 일반적으로 80~100점을 획득하고, 강등팀은 2~30점을 얻습니다. 때문에 승점의 표준편차가 적은 리그일 수록 리그에 속한 팀들 간의 승점 획득 경쟁이 치열하다고 해석할 수 있습니다. 각 리그의 승점 획득에 대한 표준편차를 표현한 그림1은 일반적으로 알려진 각 리그의 특성을 잘 드러내고 있습니다. 최근 몇 년 동안 스페인 라 리가는 레알 마드리드, 바르셀로나, 아틀레티코 마드리드라는 리그 빅3 팀과 그렇지 못한 팀들의 격차가 상대적으로 큽니다. 이는 위 그래프로 확인할 수 있습니다. \n",
     "\n",
-    "![picture/EDA/9.png](picture/EDA/9.png)<center>**[그림2]시즌별 각 리그 배당률의 표준편차**</center> \n",
+    "![picture/EDA/9.png](picture/EDA/9.png)**[그림2]시즌별 각 리그 배당률의 표준편차**\n",
     "\n",
     "그림1이 실제 각 리그의 경쟁 강도의 정도를 나타 낸 것이라면, 그림2는 오즈메이커들에 의해 예측된 리그의 경쟁 강도를 나타낸 것입니다. 그림 1과 비교해보았을때, 오즈메이커들은 실제 보다 더 과장되게 라리가의 경쟁 강도를 약하다고 여기고 있습니다.\n",
     "\n",
-    "![picture/EDA/1.png](picture/EDA/3.png)<center>**[그림3]각 리그의 승점과 배당률 표준편차를 joint plot 으로 표현**</center>   \n",
-    "![picture/EDA/1.png](picture/EDA/4.png)<center>**[그림4]각 리그의 승점과 배당률 표준편차를 선형 회귀로 표현**</center>\n",
+    "![picture/EDA/1.png](picture/EDA/3.png)**[그림3]각 리그의 승점과 배당률 표준편차를 joint plot 으로 표현**  \n",
+    "![picture/EDA/1.png](picture/EDA/4.png)**[그림4]각 리그의 승점과 배당률 표준편차를 선형 회귀로 표현**\n",
     "\n",
     "시즌별 각 리그의 승점과 배당률 표준편차의 피어슨 상관계수는 0.5972 입니다.  \n",
     "\n",
@@ -97,7 +97,7 @@
     "\n",
     "17/18 시즌 EPL의 MPE 방정식을 통한 우승팀 예측과 실제 결과입니다. 맨체스터 시티는 기대승점인 94.13점 보다 5.87점 가량 더 높은 100점을 기록하여 우승을 차지했습니다. 웨스트 브로미치 알비온은 기대 점수인 33.7 보다 2.7점 낮은 31점을 기록하여 강등을 당하였습니다. EPL에서는 18위 부터 20위를 기록한 팀은 다음 시즌에 더 낮은 리그로 강등을 당합니다. WBA의 예상순위는 17위로 다음시즌에 강등되지 않을 것으로 예측 되었습니다. 이를 보건대 17/18시즌의 WBA은 운이 따르지 않았던 것으로 보입니다.\n",
     "\n",
-    "![picture/EDA/1.png](picture/EDA/7.png)<center>**[그림5]기대 승점과 실제 승점의 선형 표현**</center>\n",
+    "![picture/EDA/1.png](picture/EDA/7.png)**[그림5]기대 승점과 실제 승점의 선형 표현**\n",
     "\n",
     "그림5는 8개 시즌의 리그 경기에 참여한 624개 팀의 기대 승점과 실제 승점의 관계를 선형으로 표현하였습니다. 결정계수는 0.897로 MPE 스코어는 실제 승점에 대해 높은 설명력을 가지고 있습니다. 이를 응용하여 feature generation 과정에서 최근 n 개 경기 홈팀 득점과 원정팀 득점, 원정팀 득점과 홈팀 득점의 평균을 방정식에 입력하여 새로운 column을 만들 수 있습니다.\n",
     "\n",
@@ -109,8 +109,8 @@
     "우선, Pandas의 groupby 함수를 이용하여 시즌 별 각 팀의 28개 경기력 수치의 평균을 구한 뒤, T-SNE 알고리즘을 이용하여 이를 2차원의 공간으로 바꾸었습니다. 2차원 공간에서 특정 팀을 선택하면, 유클리드 거리를 기반으로 가장 가까운 N개의 팀을 출력합니다.  \n",
     "  \n",
     "  \n",
-    "![picture/EDA/1.png](picture/EDA/simlist2.png)<center>**[그림6]17/18 맨체스터와 유사한 팀의 10개 목록**</center>\n",
-    "![picture/EDA/1.png](picture/EDA/8.png)<center>**[그림7]17/18 맨체스터와 유사한 팀 시각화**</center>\n",
+    "![picture/EDA/1.png](picture/EDA/simlist2.png)**[그림6]17/18 맨체스터와 유사한 팀의 10개 목록**\n",
+    "![picture/EDA/1.png](picture/EDA/8.png)**[그림7]17/18 맨체스터와 유사한 팀 시각화**\n",
     "\n",
     "17/18 시즌 EPL의 우승팀인 맨체스터 시티와 유사한 10개 팀을 출력한 결과, 17/18시즌의 맨체스터 시티의 경기 양상은 주로 나폴리와 바이에른 뮌헨, 바르셀로나와 비슷하다는 것을 확인할 수 있습니다. 17/18 시즌 맨체스터 시티의 감독인\n",
     "펩 과르디올라는 바르셀로나의 선수, 감독을 거치면서 바르셀로나 특유의 전술 철학을 습득하였고, 13/14시즌 부터 15/16 시즌까지 바이에른 뮌헨의 감독 생활을 했습니다. 펩 과르디올라가 몸을 담은 팀마다 자신의 전술적 색채를 뚜렷이 드러낸 것을 확인할 수 있습니다. 또한 16/17시즌과 17/18시즌의 나폴리 감독이었던 마우리시오 사리는 펩 과르디올라와 마찬가지로 강한 압박과 공격적인 패스를 전술로 삼고 있기에 사리의 나폴리 역시 펩 과르디올라의 맨체스터 시티와 유사한 관계를 가지고 있음을 볼 수 있습니다. 이를 응용하여 624개 팀 대신 624명의 감독을 적용하여 각 감독들의 전술적 유사도를 찾아내는 것도 가능할 것 입니다.\n",
@@ -123,11 +123,11 @@
     "\n",
     "T-SNE 로 데이터 셋의 차원을 2차원으로 축소 한 뒤, 유클리디언 거리를 통해 유사한 팀을 찾아냈던 것 처럼 유사한 경기 역시 찾아 낼 수 있습니다. \n",
     "\n",
-    "![picture/EDA/1.png](picture/prediction/1.png)<center>**[그림8]18.04.22 맨체스터vs스완지 경기와 유사한 경기의 시각화**</center>  \n",
+    "![picture/EDA/1.png](picture/prediction/1.png)**[그림8]18.04.22 맨체스터vs스완지 경기와 유사한 경기의 시각화**  \n",
     "\n",
     "그림8은 18년 4월 22일에 진행된 맨체스터 시티와 스완지의 대결과 가장 유사한 10개의 경기를 시각화 한 것입니다. 골 득실의 크기에 따라 마커의 크기를, 경기 결과에 따라 마커의 색과 모양이 다르도록 표현 되어있습니다. 홈팀의 승리와 패배가 몰려있는 구간에 예측하고자 하는 경기가 위치한다면 직관적으로 그 구간과 비슷한 경기 결과가 나올 것이라고 예상할 수 있습니다.  \n",
     "\n",
-    "![picture/EDA/1.png](picture/prediction/simmatch1.png)<center>**[그림9]18.04.22 맨체스터vs스완지 경기와 유사한 경기**</center>  \n",
+    "![picture/EDA/1.png](picture/prediction/simmatch1.png)**[그림9]18.04.22 맨체스터vs스완지 경기와 유사한 경기**  \n",
     "\n",
     "그림9는 홈팀 맨체스터 시티와 원정팀 스완지의 최근 3경기 평균 경기력과 가장 유사한 경기들의 목록입니다. 해당 경기와 유사한 10개의 경기 모두 홈팀이 승리하였고, 해당 경기 역시 홈팀 맨체스터 시티가 3:0으로 승리하였습니다. \n",
     "맨 아래의 [0.502, 0.248, 0.248] 의 숫자는 그림 8에서 직관적으로 경기 결과를 예측하는 과정을 자동화한 결과이며, 이전 경기 결과를 이용하여 승부 결과를 softmax 함수를 통해 확률로 표현한 것입니다. 리스트의 숫자는 홈팀의 승리, 무승부, 패배 확률을 의미합니다. 해당 코드는 아래와 같습니다.\n",
@@ -157,7 +157,7 @@
     "  |BUNDES|0.46732|0.46732|0.45752|0.43137|0.45425|0.48039| \n",
     "  |No BUNDES|0.52193|0.4956|0.53804|0.48596|0.54736|0.54385| \n",
     "  \n",
-    "<center>**[표1] Test accuracy**</center>\n",
+    "**[표1] Test accuracy**\n",
     "\n",
     "> |      | LR    | KNN  |L-SVC | RF  |Multi NB| XGB   |\n",
     "  |:----:|:-----:|-----:|:----:|:---:|-------:|------:|\n",
@@ -167,7 +167,7 @@
     "  |BUNDES|0.49032|0.47409|0.48720|0.43161|0.45473|0.45473| \n",
     "  |No BUNDES|0.55614|0.54825|0.56491|0.51140|0.50877|0.52105| \n",
     "\n",
-    "<center>**[표2] Average score of 10-fold Cross validation**</center>  \n",
+    "**[표2] Average score of 10-fold Cross validation**  \n",
     "\n",
     "> |      | LR    | KNN  |L-SVC | RF  |Multi NB| XGB   |\n",
     "  |:----:|:-----:|-----:|:----:|:---:|-------:|------:|\n",
@@ -177,7 +177,7 @@
     "  |BUNDES|0.47|0.48|0.46|0.43|0.46|0.45| \n",
     "  |No BUNDES|0.52|0.5|0.52|0.49|0.52|0.53| \n",
     "  \n",
-    "<center>**[표3] F1-score**</center>\n",
+    "**[표3] F1-score**\n",
     "\n",
     "각 리그별로 예측을 따로 진행한 결과 이탈리아의 세리에 리그의 테스트셋 정확도는 거의 53~58%로 가장 좋은 반면, 스페인의 라리가와 독일의 분데스리가에 대한 예측 성능이 확연히 떨어지는 것을 확인할 수 있었습니다. 흥미로운 점은 리그 별로 가장 좋은 성능을 내는 모델이 다르다는 점입니다. 라리가 데이터의 경우에는 XGBoost 가 가장 좋은 성능을 발휘하지만, EPL과 세리에 데이터는 로지스틱 회귀 모델에서 가장 좋은 성능을 발휘 합니다. 분데스리가를 제외한 3개의 리그 데이터로 한꺼번에 예측하는 경우에는 XGBoost가 가장 좋은 성능을 발휘 합니다. \n",
     "\n",
@@ -194,7 +194,7 @@
     "\n",
     "ANN 모델에 데이터를 학습시킬때 염두에 둔 것은, 단순히 최대한 높은 accuracy 를 획득하는 것이 아니라, 3개 클래스 중 가장 예측하기 어려운 무승부를 얼마나 많이 예측하는지였습니다. 모델이 무승부에 대한 특성을 잘 학습하면서도 일정 수준 이상의 accuracy를 가질 수 있도록 Learning rate 를 최대한 낮추었습니다. ANN 모델은 Pytorch 라이브러리로 제작되었고, 128개 노드를 가진 13개의 Affine 레이어로 구성되어 있습니다.\n",
     "\n",
-    "![picture/EDA/1.png](picture/prediction/ANN.png)<center>**[그림10] ANN 모델 성능**</center> \n",
+    "![picture/EDA/1.png](picture/prediction/ANN.png)**[그림10] ANN 모델 성능** \n",
     "\n",
     "학습을 완료한 ANN 모델에 La Liga, EPL, Serie A 의 2017/2018 시즌 데이터 1140 개를 테스트해 본 결과 55%의 경기를 적중시켰습니다. 에폭을 늘리면 59%의 정확도까지 얻을 수 있지만 무승부를 전혀 예측하지 않는 현상이 발생하게 됩니다. 적중하기 어려운 무승부 대신 상대적으로 예측하기 쉬운 홈팀의 승리와 패배만을 예측하기 때문에 정확도가 높아지는 것입니다.\n",
     "\n",
@@ -204,7 +204,7 @@
     "\n",
     "스웨덴의 10개 신문사들은 매주 축구 경기를 예측하는데, 대부분의 적중률은 45~46%에 불과합니다.\n",
     "\n",
-    "![picture/EDA/1.png](picture/prediction/newspaperprediction.png)<center>**[그림11] 2015년 스웨덴 10개 신문사의 축구 경기 예측**</center>  \n",
+    "![picture/EDA/1.png](picture/prediction/newspaperprediction.png)**[그림11] 2015년 스웨덴 10개 신문사의 축구 경기 예측**\n",
     "출처 : http://publications.lib.chalmers.se/records/fulltext/250411/250411.pdf\n",
     "\n",
     "------------------------------------\n",
@@ -244,9 +244,9 @@
     "\n",
     "![picture/EDA/1.png](picture/prediction/p1.png)\n",
     "\n",
-    "![picture/EDA/1.png](picture/prediction/4.png)<center>**[그림13] 라운드 별 수익**</center>  \n",
+    "![picture/EDA/1.png](picture/prediction/4.png)**[그림13] 라운드 별 수익**\n",
     "\n",
-    "![picture/EDA/1.png](picture/prediction/5.png)<center>**[그림14] 라운드 별 잔고**</center>  \n",
+    "![picture/EDA/1.png](picture/prediction/5.png)**[그림14] 라운드 별 잔고** \n",
     "\n",
     "베팅할 경기의 선택은 켈리 값을 기준으로 진행했지만 베팅 금액은 모두 동일하게 10%씩 분배했습니다. 그 결과 시즌 종료 후 총 23.74%의 수익을 얻었습니다. 한 라운드 당 10000원씩 베팅하였으므로 총 38라운드, 380개 경기에 380000원을 베팅하였고, 90240원(470240 - 380000)의 수익을 얻었습니다. \n",
     "\n",
@@ -254,9 +254,9 @@
     "\n",
     "![picture/EDA/1.png](picture/prediction/p5.png)\n",
     "\n",
-    "![picture/EDA/1.png](picture/prediction/13.png)<center>**[그림13] 라운드 별 수익**</center>  \n",
+    "![picture/EDA/1.png](picture/prediction/13.png)**[그림13] 라운드 별 수익**\n",
     "\n",
-    "![picture/EDA/1.png](picture/prediction/14.png)<center>**[그림14] 라운드 별 잔고**</center>  \n",
+    "![picture/EDA/1.png](picture/prediction/14.png)**[그림14] 라운드 별 잔고**\n",
     "\n",
     "라운드 당 20개의 경기 중에서 무조건 10개의 경기를 선택하는 A 와 달리 B는 켈리 값에 따라 베팅을 선택하기 떄문에 베팅 경기 숫자가 4~7 경기로 유동적입니다. B 방법으로는 38개 라운드, 217 경기에 369504원을 베팅하였고, 60724 원 (430228 - 369504)의 수익을 얻었습니다.\n",
     "\n",
@@ -266,11 +266,11 @@
     "\n",
     "![picture/EDA/1.png](picture/prediction/p6.png)\n",
     "\n",
-    "![picture/EDA/1.png](picture/prediction/15.png)<center>**[그림13] 라운드 별 수익**</center>  \n",
+    "![picture/EDA/1.png](picture/prediction/15.png)**[그림13] 라운드 별 수익** \n",
     "\n",
-    "![picture/EDA/1.png](picture/prediction/16.png)<center>**[그림14] 라운드 별 잔고**</center>  \n",
+    "![picture/EDA/1.png](picture/prediction/16.png)**[그림14] 라운드 별 잔고**\n",
     "\n",
-    "![picture/EDA/1.png](picture/prediction/17.png)<center>**[그림15] 누적 수익**</center>  \n",
+    "![picture/EDA/1.png](picture/prediction/17.png)**[그림15] 누적 수익** \n",
     "\n",
     "38라운드에 걸쳐 라운드 당 5개의 두폴 게임, 190게임에 380000원을 베팅한 결과 52930 원 (432930 - 380000)의 수익을 얻었습니다. 190개의 두폴 베팅 게임 중에서 44개를 적중시켰습니다. 수익률은 13.93%로 앞선 단폴 시뮬레이션에 비해 다소 낮습니다. 한국의 합법 스포츠 베팅에서는 단폴 게임을 금지하고 있기 때문에 C 시뮬레이션이 한국의 베팅 환경에 부합합니다.\n",
     "\n",
